# codeptit-cli

./: Cargo.toml  logo.ans
src/: cli.rs  config.rs  main.rs  util.rs
src/codeptit/: api.rs  auth.rs  course.rs  login.rs  mod.rs  submit.rs
