[package]
name = "codeptit-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.13.2", features = ["blocking", "json", "multipart", "query"] }
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.18.0"
toml = "1.0.6"
