[package]
name = "codeptit-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
cliclack = "0.4.1"
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml"] }
humantime = "2.3.0"
reqwest = { version = "0.13.2", features = ["blocking", "json", "multipart", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.18.0"
toml = "1.0.6"
